--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <a href="#phase2">Phase 2</a>
         <a href="#phase3">Phase 3</a>
         <a href="#phase4">Phase 4</a>
-        <input type="text" placeholder="Search..">
+        
     </div>
 
     <div class="jumbotron">
         <div class="text-header">
-            <h1>Search for your<br>
-                favorite MCU movies</h1>
+            <h1>Find your favorite<br>
+                MCU movies here!</h1>
         </div>
         <div class="img-header">
             <img src="assets/logo-jumbotron.png" width="600" height="480" />
